--- a/css/style.css
+++ b/css/style.css
@@ -165,3 +165,16 @@ a:focus, a:hover{text-decoration:none;}
     padding: 4px;
     width: 150px;
 }
+.loading {
+    background: #fff url("../images/loader.gif") no-repeat scroll center center;
+    bottom: 0;
+    display: none;
+    height: 100%;
+    left: 0;
+    opacity: 0.80;
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 100%;
+    z-index: 20140628;
+}
